--- a/src/app/(dashboard)/dashboard/point/point.module.css
+++ b/src/app/(dashboard)/dashboard/point/point.module.css
@@ -73,6 +73,9 @@
     align-items: baseline;
     justify-content: flex-start;
     gap: 0.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: none;
 }
 
 .poinCardContent h1 {
